# cy-gallery

./: .cfignore  .env  .gitignore  LICENSE  _redirects  astro.config.mjs  gallery.db  implementation_plan.md.resolved  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  wrangler.jsonc
.astro/: settings.json
.github/workflows/: visual-review.yml
backend/: Cargo.toml  gallery.db
backend/migrations/: 20260111152247_initial_schema.sql
backend/src/: db.rs  handlers.rs  main.rs
e2e/: visual-review.spec.ts
frontend/: Cargo.toml
frontend/assets/: style.css
frontend/src/: main.rs  pages.rs
frontend/src/components/: navbar.rs
frontend/src/pages/: detail.rs  gallery.rs  upload.rs
functions/api/: images.ts
gallery_home_with_interactive_map/: code.html
gallery_server/: Cargo.toml
gallery_server/src/: main.rs
node_server/: package-lock.json  package.json  tsconfig.json  upload.ts  wrangler.toml
node_server/functions/api/: images.ts  upload-url.ts
node_server/src/: server.ts
photo_discovery_and_details/: code.html
public/upload/: index.html
shared/src/: lib.rs
src/components/: Navbar.astro
src/layouts/: Layout.astro
src/pages/: collections.astro  discovery.astro  index.astro  upload.astro
src/styles/: global.css
upload_your_photography/: code.html
