[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }
# dioxus-web = "0.6" # Included in dioxus features usually, but kept in mind
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
shared = { path = "../shared" }
console_error_panic_hook = "0.1"
tracing = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlFormElement",
    "FormData",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "console",
] }
